--- a/Presentation/ProductScene/View/TableViewCell/ProductTableViewCell.xib
+++ b/Presentation/ProductScene/View/TableViewCell/ProductTableViewCell.xib
@@ -17,25 +17,25 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lLA-gd-78R">
-                        <rect key="frame" x="0.0" y="25" width="80" height="80"/>
+                        <rect key="frame" x="0.0" y="12" width="80" height="106"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="80" id="Mdm-RL-1d1"/>
                             <constraint firstAttribute="width" constant="80" id="ZeO-wF-Z5N"/>
+                            <constraint firstAttribute="height" constant="106" id="gI1-ZI-iab"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEH-Jq-1h5">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEH-Jq-1h5">
                         <rect key="frame" x="88" y="6" width="228" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="05Z-yS-Ntv">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="05Z-yS-Ntv">
                         <rect key="frame" x="88" y="34.5" width="228" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$1.009.0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aHD-Eb-iEw">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aHD-Eb-iEw">
                         <rect key="frame" x="88" y="64" width="216" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
@@ -43,29 +43,36 @@
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cis-qW-Qbb">
                         <rect key="frame" x="210" y="89" width="30" height="30"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="76P-qI-jaO"/>
                             <constraint firstAttribute="height" constant="30" id="Iv9-Ts-AWC"/>
                         </constraints>
-                        <state key="normal" title="+"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                        <state key="normal" title="+">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
                         <connections>
                             <action selector="addWhishListOnClickWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0PV-8C-5MA"/>
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SZY-9c-egg">
                         <rect key="frame" x="266" y="89" width="30" height="30"/>
+                        <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="gP1-lw-BkM"/>
                             <constraint firstAttribute="height" constant="30" id="lhL-9N-6Wh"/>
                         </constraints>
-                        <state key="normal" title="-"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                        <state key="normal" title="-">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
                         <connections>
                             <action selector="removeWhishListOnClickWithSender:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="iVT-Ld-WUk"/>
                         </connections>
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="lLA-gd-78R" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="9fj-bm-v51"/>
                     <constraint firstItem="SZY-9c-egg" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="AXo-PC-UY1"/>
                     <constraint firstItem="05Z-yS-Ntv" firstAttribute="top" secondItem="WEH-Jq-1h5" secondAttribute="bottom" constant="8" id="CVK-5b-9Ue"/>
                     <constraint firstItem="WEH-Jq-1h5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="6" id="Noc-SZ-Lto"/>
@@ -76,6 +83,7 @@
                     <constraint firstItem="WEH-Jq-1h5" firstAttribute="leading" secondItem="lLA-gd-78R" secondAttribute="trailing" constant="8" id="WC8-fH-oC1"/>
                     <constraint firstItem="aHD-Eb-iEw" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="ZZH-3Y-ybu"/>
                     <constraint firstItem="Cis-qW-Qbb" firstAttribute="top" secondItem="aHD-Eb-iEw" secondAttribute="bottom" constant="8" id="aBP-vh-vDf"/>
+                    <constraint firstItem="lLA-gd-78R" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="ais-0p-HrN"/>
                     <constraint firstItem="lLA-gd-78R" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="fgy-KD-Ta8"/>
                     <constraint firstAttribute="trailing" secondItem="05Z-yS-Ntv" secondAttribute="trailing" constant="8" id="hfP-TC-pju"/>
                     <constraint firstItem="SZY-9c-egg" firstAttribute="leading" secondItem="Cis-qW-Qbb" secondAttribute="trailing" constant="26" id="i6n-St-NLO"/>
